# Lolidance

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp  readme.txt  videocapture.cpp
ASCII/: Loli-1.txt  Loli-10.txt  Loli-100.txt  Loli-101.txt  Loli-102.txt  Loli-103.txt  Loli-104.txt  Loli-105.txt  Loli-106.txt  Loli-107.txt  Loli-108.txt  Loli-109.txt  Loli-11.txt  Loli-110.txt  Loli-111.txt  Loli-112.txt  Loli-113.txt  Loli-114.txt  Loli-115.txt  Loli-116.txt  Loli-117.txt  Loli-118.txt  Loli-119.txt  Loli-12.txt  Loli-120.txt  Loli-121.txt  Loli-122.txt  Loli-123.txt  Loli-124.txt  Loli-126.txt  Loli-127.txt  Loli-128.txt  Loli-129.txt  Loli-13.txt  Loli-130.txt  Loli-131.txt  Loli-132.txt  Loli-135.txt  Loli-136.txt  Loli-137.txt  (+678 more)
